# pharma-reg

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  regulatory_filing_consistency_analysis_plan.md
.claude/: settings.local.json
mocks/: component-reuse-matrix.html  csr-authoring-hitl.jsx  narrative-gen-mockup.jsx  org-interaction-matrix.html  regulatory-document-map.html
pharma_reg/: __init__.py  cli.py  config.py  consistency.py  extract.py  fetch.py  kg.py  ontology.py  parse.py  report.py  resolve.py
programs/: pembrolizumab_lung.yaml
reports/: pembrolizumab_lung.md
